<resources>
    <string name="app_name">古诗文</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_settings">Settings</string>
    <string name="str_type_refranes">名句</string>
    <string name="str_type_poesia">诗文</string>
    <string name="str_type_author">作者</string>
    <string name="str_type_libros">古籍</string>
    <string name="str_author_borntime">朝代</string>
    <string name="str_author_borntime_bx">不限</string>
    <string name="str_author_borntime_xq">先秦</string>
    <string name="str_author_borntime_lh">两汉</string>
    <string name="str_author_borntime_wj">魏晋</string>
    <string name="str_author_borntime_nbc">南北朝</string>
    <string name="str_author_borntime_sd">隋代</string>
    <string name="str_author_borntime_td">唐代</string>
    <string name="str_author_borntime_sd1">宋代</string>
    <string name="str_author_borntime_jc">金朝</string>
    <string name="str_author_borntime_yd">元代</string>
    <string name="str_author_borntime_md">明代</string>
    <string name="str_author_borntime_qd">清代</string>
    <string name="str_refranes_type">类型</string>
    <string name="str_refranes_theme">主题</string>
    <string name="str_poesia_type_lx">类型</string>
    <string name="str_poesia_type_cd">朝代</string>
    <string name="str_poesia_type_xs">形式</string>
    <string name="str_libros_type_jb">经部</string>
    <string name="str_libros_type_sb">史部</string>
    <string name="str_libros_type_zb">子部</string>
    <string name="str_libros_type_jb1">集部</string>
    <string name="str_collection">收藏</string>

    <string name="str_refranes_theme_bx">不限</string>
    <string name="str_refranes_theme_sq">抒情</string>
    <string name="str_refranes_theme_sq1">四季</string>
    <string name="str_refranes_theme_ss">山水</string>
    <string name="str_refranes_theme_tq">天气</string>
    <string name="str_refranes_theme_rw">人物</string>
    <string name="str_refranes_theme_rs">人生</string>
    <string name="str_refranes_theme_sh">生活</string>
    <string name="str_refranes_theme_jr">节日</string>
    <string name="str_refranes_theme_dw">动物</string>
    <string name="str_refranes_theme_zw">植物</string>
    <string name="str_refranes_theme_sw">食物</string>
    <string-array name="arrayt_refranes_theme">
        <item>@string/str_refranes_theme_bx</item>
        <item>@string/str_refranes_theme_sq</item>
        <item>@string/str_refranes_theme_sq1</item>
        <item>@string/str_refranes_theme_ss</item>
        <item>@string/str_refranes_theme_tq</item>
        <item>@string/str_refranes_theme_rw</item>
        <item>@string/str_refranes_theme_rs</item>
        <item>@string/str_refranes_theme_sh</item>
        <item>@string/str_refranes_theme_jr</item>
        <item>@string/str_refranes_theme_dw</item>
        <item>@string/str_refranes_theme_zw</item>
        <item>@string/str_refranes_theme_sw</item>
    </string-array>
    <string-array name="arrayt_type">
        <item>@string/str_type_poesia</item>
        <item>@string/str_type_refranes</item>
        <item>@string/str_type_author</item>
        <item>@string/str_type_libros</item>
    </string-array>
    <string-array name="arrayt_libros_type">
        <item>@string/str_libros_type_jb</item>
        <item>@string/str_libros_type_sb</item>
        <item>@string/str_libros_type_zb</item>
        <item>@string/str_libros_type_jb1</item>
    </string-array>
    <string-array name="array_libros_type">
        <item>@string/str_author_borntime_bx</item>
        <item>@string/str_author_borntime_xq</item>
        <item>@string/str_author_borntime_lh</item>
        <item>@string/str_author_borntime_wj</item>
        <item>@string/str_author_borntime_nbc</item>
        <item>@string/str_author_borntime_sd</item>
        <item>@string/str_author_borntime_td</item>
        <item>@string/str_author_borntime_sd1</item>
        <item>@string/str_author_borntime_jc</item>
        <item>@string/str_author_borntime_yd</item>
        <item>@string/str_author_borntime_md</item>
        <item>@string/str_author_borntime_qd</item>
    </string-array>
    <string-array name="array_author_borntimes">
        <item>@string/str_author_borntime_bx</item>
        <item>@string/str_author_borntime_xq</item>
        <item>@string/str_author_borntime_lh</item>
        <item>@string/str_author_borntime_wj</item>
        <item>@string/str_author_borntime_nbc</item>
        <item>@string/str_author_borntime_sd</item>
        <item>@string/str_author_borntime_td</item>
        <item>@string/str_author_borntime_sd1</item>
        <item>@string/str_author_borntime_jc</item>
        <item>@string/str_author_borntime_yd</item>
        <item>@string/str_author_borntime_md</item>
        <item>@string/str_author_borntime_qd</item>
    </string-array>
    <string name="str_author_detail_tab_jj">简介</string>
    <string name="str_author_detail_tab_xq">详情</string>
    <string name="str_author_detail_tab_sj">诗集</string>
    <string name="str_libros_detail_tab_gy">概要</string>
    <string name="str_libors_detail_tab_ml">目录</string>
    <string name="str_cancel">取消</string>
    <string name="str_sure">确定</string>
    <string-array name="array_author_detail_tab">
        <item>@string/str_author_detail_tab_jj</item>
        <item>@string/str_author_detail_tab_xq</item>
        <item>@string/str_author_detail_tab_sj</item>
    </string-array>
    <string-array name="array_libros_detail_tab">
        <item>@string/str_libros_detail_tab_gy</item>
        <item>@string/str_libors_detail_tab_ml</item>
    </string-array>
    <string-array name="arrayt_libros_type_jb">
        <item>易类</item>
        <item>书类</item>
        <item>诗类</item>
        <item>礼类</item>
        <item>春秋类</item>
        <item>孝经类</item>
        <item>五经总义类</item>
        <item>四书类</item>
        <item>乐类</item>
        <item>小学类</item>
    </string-array>
    <string-array name="arrayt_libros_type_sb">
        <item>正史类</item>
        <item>编年类</item>
        <item>纪事本末类</item>
        <item>杂史类</item>
        <item>别史类</item>
        <item>诏令奏议类</item>
        <item>传记类</item>
        <item>史钞类</item>
        <item>载记类</item>
        <item>时令类</item>
        <item>地理类</item>
        <item>职官类</item>
        <item>政书类</item>
        <item>目录类</item>
        <item>史评类</item>
    </string-array>
    <string-array name="arrayt_libros_type_zb">
        <item>儒家类</item>
        <item>兵家类</item>
        <item>法家类</item>
        <item>农家类</item>
        <item>医家类</item>
        <item>天文算法类</item>
        <item>术数类</item>
        <item>艺术类</item>
        <item>谱录类</item>
        <item>杂家类</item>
        <item>类书类</item>
        <item>小说家类</item>
        <item>释家类</item>
        <item>道家类</item>
    </string-array>
    <string-array name="arrayt_libros_type_jb1">
        <item>楚辞类</item>
        <item>别集类</item>
        <item>总集类</item>
        <item>诗文评类</item>
        <item>词曲类</item>
    </string-array>



</resources>
