<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_poesia"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/str_type_poesia" />
        <item
            android:id="@+id/nav_refranes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/str_type_refranes" />
        <item
            android:id="@+id/nav_author"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/str_type_author" />
        <item
            android:id="@+id/nav_libros"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/str_type_libros" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="收藏" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="分享" />
        </menu>
    </item>

</menu>
