<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:elevation="2dp">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintHorizontal_bias="0.07"
            android:text="@string/str_poesia_type_lx"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/str_poesia_type_cd"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/str_poesia_type_xs"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />
    </android.support.constraint.ConstraintLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableHeaderTranslationContent="false"
        app:srlEnableLoadmore="true">

        <com.scwang.smartrefresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />
        <com.scwang.smartrefresh.layout.footer.BallPulseFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>